# gevorderde-algoritmen

./: .clang-format  .travis.yml  README.md
2016-2017/: index.html
2016-2017/inleidende-oefening-c++11/: Knoop.cpp  Knoop.h  Lijst.cpp  Lijst.h  main.cpp
2016-2017/inleidende-oefening-c++11/opgave/: Lijst.cpp  headers.html  index.html  introductie_uniquepointers_opl_deel1.cpp  introductie_uniquepointers_startpunt.cpp
2016-2017/labo-01-binaire-bomen/: main.cpp
2016-2017/labo-01-binaire-bomen/opgave/: zoekboom11.h
2016-2017/labo-01-binaire-bomen/oplossing/: boom.dot  genereer-dot.sh  onevenwichtige_boom.dot
2016-2017/labo-02-splaybomen/: csv.h  splayboomb.h
2016-2017/labo-02-splaybomen/oplossing/: 5.dot  opbouw.dot
2016-2017/labo-03-dynamisch-programmeren/: BridgeReader.h  CMakeLists.txt  bridge.cpp  bridge.h  bridgefinder-test.cpp  bridgefinder.cpp  bridgefinder.h  main.cpp  test.txt
2016-2017/labo-03-dynamisch-programmeren/opgave/: opgave03.html
2016-2017/labo-04-btrees/: CMakeLists.txt  bknoop.h  btree.h  main.cpp
2016-2017/labo-04-btrees/test/: bknoop-unittest.cpp
2016-2017/labo-05-kdtrees/: Boom2D.h  Punt2D.h  main.cpp
2016-2017/labo-05-kdtrees/extra/: 2e-mogelijke-oplossing.txt  gegenereerde-puntenverzameling.txt
2016-2017/labo-05-kdtrees/opgave/: opgave05.html
2016-2017/labo-06-stroomnetwerken/: main.cpp
2016-2017/labo-06-stroomnetwerken/opgave/: opgave06.html
2016-2017/labo-07-knutt-moris-pratt/: main.cpp
2016-2017/labo-09-shift-and/: bitpatroon.h  capital-test.txt  main.cpp  shiftand.h
2016-2017/labo-09-shift-and/opgave/: bitpatroon.h  opgave09.html
2016-2017/labo-1/: main.cpp  zoekboom.h
2016-2017/labo-1/opgave/: opgave01.html
2016-2017/labo-1/oplossing/: boom_rotatie_links.dot  boom_rotatie_rechts.dot  terug_evenwichtige_boom.dot
2016-2017/labo-10/opgave/: opgave10.html
2016-2017/labo-11/: affiches_sa.h  simulanneal11.h
2016-2017/labo-11-simulated-annealing/: dom.h  main.cpp  probprob.h
2016-2017/labo-11/opgave/: opgave11.html  probprob.cpp  probprob.h
2016-2017/labo-2/: graphgenerator.py  main.cpp  puntgenerator.h
2016-2017/labo-2/opgave/: opgave02.html  statistiek.cc
2016-2017/labo-2/oplossing/: 0.dot  1.dot  2.dot  3.dot  4.dot  6.dot  generate_png.bat  zoek_met_splay.dot  zoek_met_splay_2.dot
2016-2017/labo-3/: Bridge.cpp  Bridge.h  BridgeFinder.cpp  BridgeFinder.h  BridgeReader.cpp  FastBridgeFinder.cpp  FastBridgeFinder.h
2016-2017/labo-4/: CMakeLists.txt  bknoop.h  btree.h  main.cpp  schijf.h
2016-2017/labo-4/opgave/: btree.h  opgave04.html
2016-2017/labo-4/test/: bknoop-unittest.cpp  btree-unittest.cpp
2016-2017/labo-5/extra/: main.cpp  oplossing-met-fout.txt  oplossing.txt
2016-2017/labo-6/: graaf.h  main.cpp  stroom.h  stroomnetwerk.h
2016-2017/labo-6/opgave/: leesvoorbeeld.cpp  quickstart.html
2016-2017/labo-7/: knuthmorrispratt.h
2016-2017/labo-7/opgave/: opgave07.html  testset.xml
2016-2017/labo-8/: RegexNaarGrammatica.h  main.cpp  regexp11.h  symbool.h
2016-2017/labo-8/opgave/: grammatica.html  opgave08.html  regexp.cc
2017-2018/labo-1/: CMakeLists.txt  main.cpp  zoekboom11.h  zoekboom14.h  zoekknoop14.h
2017-2018/labo-1-binaire-bomen/: CMakeLists.txt  generate_makefile.sh  main.cpp  zoekboom14.h  zoekknoop14.h
2017-2018/labo-1-binaire-bomen/opgave/: zoekboom14.h
2017-2018/labo-1-binaire-bomen/oplossing/: boom_onevenwichtig.dot  boom_roteer_links.dot  boom_roteer_rechts.dot  originele_boom_na_move.dot
2017-2018/labo-10-simulated-annealing/: CMakeLists.txt  main.cpp  probprob.h  simulanneal11.h  travelingsalesman.h
2017-2018/labo-2/: main.cpp  rzboom14.h  rzknoop14.h
2017-2018/labo-2-rood-zwarte-bomen/: CMakeLists.txt  main.cpp  rzboom14.h  rzknoop14.h
2017-2018/labo-3/: bottelmachine.h  dnasequentie.h  main.cpp
2017-2018/labo-3-dynamic-programming/: CMakeLists.txt  bottelmachine.h  main.cpp
2017-2018/labo-4/: CMakeLists.txt  csv.h  main.cpp  puntgenerator.h  zoekknoop14.h
2017-2018/labo-4-pquadtrees/: CMakeLists.txt  main.cpp  punt2d.h  zoekboom14.h
2017-2018/labo-4/opgave/: opgave04.html
2017-2018/labo-4/oplossing/: coordinates-enkel-punten.gnuplot  coordinates.gnuplot  dieptes.gnuplot  shuffled-coordinates.gnuplot
2017-2018/labo-5-stroomnetwerken/: CMakeLists.txt  grootstecapaciteitenpadzoeker.h  kortstepadzoeker.h  langpadzoeker.h  main.cpp  stroomnetwerk.h  stroomnetwerk_test.cpp  stroomnetwerkgenerator.h  vergrotendpad.h  volgendpadzoeker.h
2017-2018/labo-6-samenhangende-componenten/: CMakeLists.txt  componentengraaf.h  graaf.h  main.cpp  test_componentengraaf.cpp
2017-2018/labo-7-boyer-moore/: CMakeLists.txt  boyermoore.h  boyermoore_test.cpp  main.cpp  woordstroom.h
2017-2018/labo-7-boyer-moore/opgave/: opgave08.html  woordstroom.h
2017-2018/labo-7-knuth-morris-pratt/: CMakeLists.txt  kmp.h  kmp_test.cpp  main.cpp
2017-2018/labo-8-automaten/: CMakeLists.txt  generate_makefile.sh  main.cpp  regexp11.h  test_input.txt  thompsonna.h  zoekda.h  zoekda_test.cpp  zoekna.h  zoekna_test.cpp
2017-2018/labo-9-simulated-annealing/: CMakeLists.txt  stad.h  travelingsalesman-probprob.h
2017-2018/labo-9-simulated-annealing/opgave/: opgave10.html  tags
2017-2018/labo-9-simulated-annealing/oplossing/: kosten.gnuplot
generic-project-files/: CMakeLists.txt  generate_makefile.sh
libraries/: CMakeLists.txt  prettyprint.h
libraries/binaire-boom/: CMakeLists.txt  binaireboom.h  binaireboom_test.cpp  boom.h  boom_test.cpp  knoop.h  knoop_test.cpp  richting.h
libraries/btree/: bknoop-test.cpp  bknoop.h  btree.h
libraries/csv/: CMakeLists.txt  csv.h  csv_test.cpp
libraries/dna-generator/: CMakeLists.txt  main.cpp
libraries/graaf/: CMakeLists.txt  graaf.h  graaf_test.cpp
libraries/lijst/: lijst.h  lijst_test.cpp
libraries/rood-zwarte-boom/: rzboom-bu.h  rzboom-test.cpp  rzboom.h
libraries/schijf/: schijf.h
libraries/simulated-annealing/: simulatedannealing.h
libraries/stringmetbits/: stringmetbits.h
libraries/woordstroom/: CMakeLists.txt  CMakeLists.txt.in  woordstroom_test.cpp
tools/: genereer-dot.sh
(+43 files in other folders)
